--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.63.6",
-    "zod": "^3.21.4"
+    "vite-plugin-svgr": "^3.2.0",
+    "zod": "^3.21.4",
+    "zod-validation-error": "^1.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
